# neo_Vague_Denoiser

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: common.h  core.cpp  core.h  core_AVX.cpp  core_SSE.cpp  corepadding_AVX2.cpp  corepadding_SSE41.cpp  cpuid.cpp  neo_vd.hpp  version.rc.in
